<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/button34"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="54dp"
        android:layout_marginLeft="58dp"
        android:text="@string/nazad" />

    <Button
        android:id="@+id/button33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button34"
        android:layout_alignLeft="@+id/button31"
        android:layout_alignRight="@+id/button322"
        android:layout_marginBottom="22dp"
        android:text="@string/izbrisisve" />

    <Button
        android:id="@+id/button31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button33"
        android:layout_alignLeft="@+id/button322"
        android:layout_alignRight="@+id/button322"
        android:layout_marginBottom="20dp"
        android:text="@string/pogledajsve" />

    <Button
        android:id="@+id/button322"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button31"
        android:layout_alignLeft="@+id/button30"
        android:layout_alignRight="@+id/button30"
        android:layout_marginBottom="20dp"
        android:text="@string/izbrisi" />

    <Button
        android:id="@+id/button30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button322"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/pogledajjednog" />

    <EditText
        android:id="@+id/editText31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:hint="@string/jmbag" >

        <requestFocus />
    </EditText>

</RelativeLayout>
