<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="54dp"
        android:text="@string/Plus_jedan11"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editText11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView21"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="110dp"
        android:ems="10"
        android:hint="@string/jmbagza21"
        tools:ignore="TextFields" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/button11"
        android:layout_width="100dip"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText11"
        android:layout_marginTop="64dp"
        android:layout_toRightOf="@+id/textView21"
        android:text="@string/Dodaj11" />

    <Button
        android:id="@+id/button12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button11"
        android:layout_alignBottom="@+id/button11"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="17dp"
        android:text="@string/JMBAG_KAMEROM1" />

    <Button
        android:id="@+id/button13"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button12"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="33dp"
        android:text="@string/nazad" />

</RelativeLayout>